# brno_number

./: .gitignore  CMakeLists.txt  number.sln
number/: number.cpp  number.hpp  number.vcxproj  number.vcxproj.filters  test.cpp
